##Text encoding: utf-8

2004-02-07  Jean Bréfort  <jean.brefort@ac-dijon.fr>
	* chem3d/gtkchem3dviewer.cc: turn around an openbabel bug.
	* gtkperiodic/gtkperiodic.c: (gtk_periodic_init): fixed a textdomain bug.
	* gtkperiodic/gtkperiodic.c: add a call to textdomain.
	* chemistry/element.cc: removed gettext initialization.

2004-01-21 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* crystalviewer/crystalview.cc: avoid execution of gl functions
	for non initialized widget.

2003-11-01 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* enhanced gchemutils.keys.in for translation

2003-10-21 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* changed element 110 to Darmstadtium.

2003-10-20 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* changed version to 0.3.0

2003-08-27 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* removed -Werror-implicit-function-declaration from GCU_CFLAGS

2003-08-27 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* crystalview.h: made private some members.
	* crystaldoc.h: removed m_bMultiView
	* object.cc (Object::AddChild): fixed  a bug.
	* added Object::GetAtomAt
	* changed version to 0.1.7
	* added some documentation using doxygen
	* element.[h,cc]: added methods to get max_bond field
	* elements.xml.in: added max_bonds for each element

2003-07-02 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* configure.ac: changed version to 0.1.6
	* chem3d/gtkchem3dViewer.cc: added bgcolor property
	* chem3d/bonobo-control.cc: added bgcolor property

2003-06-30 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* chemistry/elements.cc (GetRadius): added missing return statement

2003-06-29 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* tests/nickel.gcrystal: updated to 0.5.2 format
	* chemistry/elements.cc, chemistry/xml-utils.cc: fixed several
	bugs related to the use of the radii database
	* crystalviewer/crystalatom.cc: wrote a sensible SetRadius method

2003-06-28 Jean Bréfort	<jean.brefort@ac-dijon.fr>
	* element.cc: a bug fixed in the database loading